--- a/.github/workflows/insert_DB.yml
+++ b/.github/workflows/insert_DB.yml
@@ -34,14 +34,18 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          source Parameter.txt
+          echo $PWD
+          echo $HOME
+          #source Parameter.txt
+          docker pull hashicorp/terraform
           docker ps
           docker images
+          ker run -i -t -v $PWD:$PWD -w $PWD docker.io/hashicorp/terraform init
           echo " before data inserted"
-          /* mysql -u d764864@cuscal.mysql.database.azure.com -h cuscal.mysql.database.azure.com -pProximus#18 -D cuscal -e "select * from cuscal;"
-          mysql -u d764864@cuscal.mysql.database.azure.com -h cuscal.mysql.database.azure.com -pProximus#18 -D cuscal -e "INSERT INTO cuscal(BSB,APNId,RequestDate,FirstName,LastName,Phone,Email,Comment) VALUES ($BSB,$APNID,'$RequestDate','$FirstName','$LastName','$Phone','$Email','$Comment');"
-          echo " data inserted"
-          echo " after data inserted"
-          mysql -u d764864@cuscal.mysql.database.azure.com -h cuscal.mysql.database.azure.com -pProximus#18 -D cuscal -e "select * from cuscal;"
+          #/* mysql -u d764864@cuscal.mysql.database.azure.com -h cuscal.mysql.database.azure.com -pProximus#18 -D cuscal -e "select * from cuscal;"
+          #mysql -u d764864@cuscal.mysql.database.azure.com -h cuscal.mysql.database.azure.com -pProximus#18 -D cuscal -e "INSERT INTO cuscal(BSB,APNId,RequestDate,FirstName,LastName,Phone,Email,Comment) VALUES ($BSB,$APNID,'$RequestDate','$FirstName','$LastName','$Phone','$Email','$Comment');"
+          #echo " data inserted"
+          #echo " after data inserted"
+          #mysql -u d764864@cuscal.mysql.database.azure.com -h cuscal.mysql.database.azure.com -pProximus#18 -D cuscal -e "select * from cuscal;"
           #mysql -u sql11488161 -h sql1.freemysqlhosting.net -pProximus#18 -D sql6467248 -e "show databases;"
-          */
+          #*/
